--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -5,10 +5,6 @@ on:
     - cron: "0 22 * * *"
   workflow_dispatch:
     inputs:
-      backend:
-        description: 'Scraper backend to use (beautifulsoup/bs)'
-        required: false
-        default: 'beautifulsoup'
       data_dir:
         description: 'Target data directory'
         required: false
@@ -39,11 +35,6 @@ on:
         default: '3'
   workflow_call:
     inputs:
-      backend:
-        description: 'Scraper backend to use (beautifulsoup/bs)'
-        required: false
-        default: 'beautifulsoup'
-        type: string
       data_dir:
         description: 'Target data directory'
         required: false
@@ -166,7 +157,6 @@ jobs:
 
       - name: Run comprehensive scraper
         run: |
-          BACKEND="${{ github.event.inputs.backend || 'beautifulsoup' }}"
           HEADLESS="${{ github.event.inputs.headless || 'true' }}"
           DATA_DIR="${{ github.event.inputs.data_dir || 'data/raw' }}"
           START_PAGE="${{ github.event.inputs.start_page || '1' }}"
@@ -174,7 +164,6 @@ jobs:
 
           echo "Running COMPREHENSIVE scraper for new entries..."
           echo "Data directory: $DATA_DIR"
-          echo "Backend: $BACKEND"
           echo "Headless: $HEADLESS"
           echo "Start page: $START_PAGE"
           
@@ -261,7 +250,6 @@ jobs:
           git commit -m "[Auto-commit] Comprehensive scraping: $NEW_RECORDS new records
 
           Scraped at: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-          Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}
           Buffer size: $BUFFER_SIZE
           Total records: ${{ steps.count_after.outputs.records_after }}
           New records: $NEW_RECORDS
@@ -322,13 +310,11 @@ jobs:
           echo "RECENT STATUS CHANGE DETECTION (FAST SCAN)"
           echo "Strategy: Scan only listing pages for status changes in the last $CUTOFF_MONTHS months"
           echo "Cutoff months: $CUTOFF_MONTHS"
-          echo "Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}"
           
           # Run fast status change detection
           python ./scripts/scrape_data.py \
             --fetch-changed-urls \
             --cutoff-months $CUTOFF_MONTHS \
-            --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
             --headless "${{ github.event.inputs.headless || 'true' }}"
           
           # Count detected URLs
@@ -442,12 +428,10 @@ jobs:
           echo "Strategy: Targeted resolution date extraction for recently changed statuses detected by Job 2"
           echo "Advantage: Optimized processing focusing only on status and resolution date extraction"
           echo "URLs to scrape: ${{ needs.recent-url-detector.outputs.changed_urls_count }}"
-          echo "Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}"
           
           # Scrape the recently changed URLs
           python ./scripts/scrape_data.py \
             --scrape-urls-file recent_changed_urls.txt \
-            --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
             --headless "${{ github.event.inputs.headless || 'true' }}"
 
       - name: Check for changes
@@ -491,7 +475,6 @@ jobs:
           git commit -m "[Auto-commit] Recent resolutions: ${{ needs.recent-url-detector.outputs.changed_urls_count }} status changes updated
 
           Updated at: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-          Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}
           Cutoff months: ${{ github.event.inputs.cutoff_months || '3' }}
           URLs processed: ${{ needs.recent-url-detector.outputs.changed_urls_count }}
           
@@ -545,7 +528,6 @@ jobs:
           echo "Strategy: Random sampling of old pending issues to check for resolutions"
           echo "Optimization: Process max 100 random URLs per run for manageable runtime"
           echo "Total URLs available: ${{ needs.old-pending-loader.outputs.pending_urls_count }}"
-          echo "Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}"
           
           # Sample 250 random URLs from the last 1000 entries
           if [ -f "old_pending_urls.txt" ]; then
@@ -559,7 +541,6 @@ jobs:
           # Scrape the old pending URLs
           python ./scripts/scrape_data.py \
             --scrape-urls-file old_pending_urls.txt \
-            --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
             --headless "${{ github.event.inputs.headless || 'true' }}"
 
       - name: Check for changes
@@ -603,10 +584,9 @@ jobs:
           git commit -m "[Auto-commit] Old resolutions: Random sample of max 100 URLs checked
 
           Updated at: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-          Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}
           Cutoff months: ${{ github.event.inputs.cutoff_months || '3' }}
           Total pending URLs: ${{ needs.old-pending-loader.outputs.pending_urls_count }}
-          Processed: Random sample (max 100)
+          Processed: Random sample of 100 URLs
           
           [skip ci]"
           
