miscellaneous small fixes

--- a/.github/workflows/full_data_pipeline.yml
+++ b/.github/workflows/full_data_pipeline.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
         scraper_backend:
-            description: 'Scraper backend to use (beautifulsoup/bs/selenium)'
+            description: 'Scraper backend to use (beautifulsoup/bs)'
             required: false
             default: 'beautifulsoup'
         data_dir:
