--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "torch (>=2.8.0)",
     "beautifulsoup4 (>=4.14.0,<5.0.0)",
     "psutil (>=5.9.0,<6.0.0)",
+    "textgenhub @ git+https://github.com/leweex95/textgenhub.git",
+    "selenium (>=4.36.0,<5.0.0)",
 ]
 
 [tool.poetry]
