--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ requires-python = ">=3.11,<3.13"
 dependencies = [
     "numpy (>=2.3.3,<3.0.0)",
     "pandas (>=2.3.2,<3.0.0)",
-    "selenium (>=4.35.0,<5.0.0)",
     "sentence-transformers (>=5.1.0,<6.0.0)",
     "faiss-cpu (>=1.12.0,<2.0.0)",
     "chromadb (>=1.1.0,<2.0.0)",
@@ -22,6 +21,8 @@ dependencies = [
     "kaleido (>=1.1.0,<2.0.0)",
     "torch (>=2.8.0)",
     "beautifulsoup4 (>=4.14.0,<5.0.0)",
+    "psutil (>=5.9.0,<6.0.0)",
+    "textgenhub @ git+https://github.com/leweex95/textgenhub.git",
 ]
 
 [tool.poetry]
