--- a/.github/workflows/eval_pipeline.yml
+++ b/.github/workflows/eval_pipeline.yml
@@ -41,8 +41,8 @@ on:
         description: 'Language for queries (en or hu)'
         required: false
         default: 'hu'
-  schedule:
-    - cron: "0 23 * * *"
+  # schedule:
+  #   - cron: "0 23 * * *"
 
 jobs:
   evaluate:
