--- a/.github/workflows/eval_pipeline.yml
+++ b/.github/workflows/eval_pipeline.yml
@@ -1,6 +1,8 @@
 name: Automated RAG Evaluation Pipeline
 
 on:
+  # schedule:
+  #   - cron: "0 23 * * *"
   workflow_dispatch:
     inputs:
       eval_set_path:
